--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,6 @@
 
 }
 
-
 body {
 
   margin: 0;
@@ -18,7 +17,6 @@ body {
   font-family: 'Roboto', sans-serif;
 
 }
-
 
 /*------------------------*/
 /* Estilos Header */
@@ -39,14 +37,12 @@ h1 {
 
 }
 
-
 h2 {
 
   font-size: 2.0em;
   color: black;
 
 }
-
 
 h3 {
 
@@ -61,21 +57,17 @@ h3 {
 
 }
 
-
 #tipodeletrahs1 {
 
   font-family: 'Roboto', sans-serif;
 
 }
 
-
 #subhea {
 
   margin-top: 1.3em;
   font-size: 1em;
-  font-family: 'Raleway', sans-serif;
- 
-  
+  font-family: 'Raleway', sans-serif;  
 
 }
 
@@ -96,12 +88,10 @@ h3 {
 }
 
 .flex-container-mistecfa {
-
+  flex-direction: column;
   display: flex;
   background-color: white;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
   margin-top: 1%;
   margin-bottom: 2%;
 
@@ -116,9 +106,7 @@ h3 {
   flex-direction: column;
   margin-top: 0.5%;
 
-
 }
-
 
 .flex-container-misactfa {
   display: flex;
@@ -132,14 +120,10 @@ h3 {
   border: 1.3px solid black;
   border-radius: 3%;
   padding: 1%;
-  flex-wrap: wrap;
   
-
 }
 
-
 .centrarh2misactfa {
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -147,7 +131,6 @@ h3 {
   margin-top: 1%;
 
 }
-
 
 /*------------------------*/
 /* Estilos flex-item */
@@ -164,12 +147,13 @@ h3 {
 
 .flex-item-mistecfa1 {
 
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   text-align: center;
   background-color: white;
-  margin: 20px;
-  border-radius: 5%;
+  margin-top: 16px;
+  margin-bottom: 16px ;
+  margin-right: 12px;
+  margin-left: 12px;
 
 }
 
@@ -186,6 +170,7 @@ h3 {
   flex-direction: column;
   margin-top: 5%;
   margin-bottom: 5%;
+
 }
 
 .flex-item-botón {
@@ -201,22 +186,37 @@ h3 {
   display: flex;
   background-color: black;
   align-items: center;
-  border: 1px solid black;
+  justify-content: center;
   border-radius: 15px;
   margin-top: 3%;
   margin-bottom: 3%;
-  border: 1px black solid;
-  
+  border: 1px black solid;*/
 
-}
+  }
 
 .márgenesmistecfa {
 
-  margin-top: 20%;
-  margin-bottom: 20%; 
+  /*display: flex;*/
+  margin-top: 1.0%;
+  margin-bottom: 1.0%; 
   margin-right: 10%;
 
 }
+
+.efectomistecfa {
+
+  /*width: 200px; /* Ajusta el tamaño de las imágenes según sea necesario */
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transiciones suaves */
+
+}
+
+.efectomistecfa:hover {
+
+  transform: scale(1.1); /* Escala la imagen un 10% más grande */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Agrega una sombra */
+
+}
+
 
 
 /*------------------------*/
@@ -249,7 +249,6 @@ img {
 
 }
 
-
 /*------------------------*/
 /* Estilos Texto */
 /*------------------------*/
@@ -280,28 +279,3 @@ img {
   resize: none;
 
 }
-
-/*https://images.pexels.com/photos/1779487/pexels-photo-1779487.jpeg (CARGA).
-
-
-https://kinsta.com/es/wp-content/uploads/sites/8/2019/09/jpg-vs-jpeg-1024x512.jpg (CARGA).
-
-
-https://kinsta.com/es/wp-content/uploads/sites/8/2019/09/jpg-vs-jpeg-iso.png (CARGA).
-
-
-https://kinsta.com/es/wp-content/uploads/sites/8/2019/07/raster-image-example-2.png (CARGA).
-
-
-https://kinsta.com/es/wp-content/uploads/sites/8/2019/08/windows-paint-3.png (CARGA).
-
-
-https://kinsta.com/es/wp-content/uploads/sites/8/2019/07/export-affinity-designer-1.png (CARGA).*/
-
-/*<script src="https://example.com/sdk.js"></script>*/
-
-/*<div class="flex-item-quiensoy">
-
-  <img id="foto" src="assets/FOTO.jpg" alt="Foto de Óscar Padilla">
-
-</div>*/
