--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ body {
 
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cascadia Code', 'Consolas', 'Courier New', monospace;
 
 }
 
@@ -24,42 +24,75 @@ body {
 
 .header {
 
-  background-color: lightblue;
-  padding: 20px;
+  padding-top: 20px;
   text-align: center;
-  color: black;
+  font-family: "Cascadia Code", Consolas, monospace;
+  background-color: lightblue;
+  padding-bottom: 20px;
+
+}
+
+.cursor::after {
+
+  content: "|";
+  animation: blink 0.8s infinite;
+
+}
+
+@keyframes blink {
+
+  50% { opacity: 0; }
+
+}
+
+.foto-perfil {
+
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  border: 4px solid #007bff;
+  margin-bottom: 10px;
 
 }
 
 h1 {
 
-  font-size: 2.0em;
+  padding-top: 10px;
+  font-size: 1.5em;
+  font-weight: bold;
 
 }
 
 h2 {
 
-  font-size: 2.0em;
+  font-size: 1.5em; 
   color: black;
 
 }
 
 h3 {
 
-  font-weight: bold;
+padding-top: 20px;
+font-size: 2.0em;
 
 }
 
 
 #tipodeletrahs {
 
-  font-family: 'Raleway', sans-serif;
+  /*font-family: 'Raleway', sans-serif;*/
 
 }
 
 #tipodeletrahs1 {
 
-  font-family: 'Roboto', sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
+
+}
+
+#tipodeletrahs2 {
+
+  /*font-family: 'Raleway', sans-serif;*/
 
 }
 
@@ -67,10 +100,8 @@ h3 {
 
   margin-top: 1.3em;
   font-size: 1em;
-  font-family: 'Raleway', sans-serif;  
 
 }
-
 
 /*------------------------*/
 /* Estilos flex-container */
@@ -190,9 +221,9 @@ h3 {
   border-radius: 15px;
   margin-top: 3%;
   margin-bottom: 3%;
-  border: 1px black solid;*/
+  border: 1px black solid;
 
-  }
+}  
 
 .márgenesmistecfa {
 
@@ -273,9 +304,12 @@ img {
 /*------------------------*/
 
 .inputanchoforybut {
-
+  
   width: 800px;
   height: 100px;
   resize: none;
 
 }
+
+  
+
