--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Cascadia Code', 'Consolas', 'Courier New', monospace;
+  background-color: black;
 
 }
 
@@ -27,7 +28,7 @@ body {
   padding-top: 20px;
   text-align: center;
   font-family: "Cascadia Code", Consolas, monospace;
-  background-color: lightblue;
+  background-color: black;
   padding-bottom: 20px;
 
 }
@@ -60,13 +61,14 @@ h1 {
   padding-top: 10px;
   font-size: 1.5em;
   font-weight: bold;
+  color: white;
 
 }
 
 h2 {
 
   font-size: 1.5em; 
-  color: black;
+  color: white;
 
 }
 
@@ -74,6 +76,7 @@ h3 {
 
 padding-top: 20px;
 font-size: 2.0em;
+color: yellow
 
 }
 
@@ -81,12 +84,14 @@ font-size: 2.0em;
 #tipodeletrahs {
 
   /*font-family: 'Raleway', sans-serif;*/
+  color: yellow;
 
 }
 
 #tipodeletrahs1 {
 
   /*font-family: 'Roboto', sans-serif;*/
+  color: red;
 
 }
 
@@ -110,7 +115,7 @@ font-size: 2.0em;
 .flex-container-SobreMi {
 
   display: flex;
-  background-color: white;
+  background-color: black;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -118,10 +123,34 @@ font-size: 2.0em;
 
 }
 
+#sobreMi  {
+  list-style-type: none; 
+  padding-left: 0;
+
+}
+
+#sobreMi li {
+
+  margin-bottom: 10px;   
+  color: white;
+  text-align: justify;
+   
+}
+
+#sobreMi li::before {
+
+  content: "●"; 
+  color: #00BFFF; 
+  font-size: 1.2em;
+  margin-right: 8px; 
+
+}
+
 .flex-container-mistecfa {
+
   flex-direction: column;
   display: flex;
-  background-color: white;
+  background-color: black;
   align-items: center;
   margin-top: 1%;
   margin-bottom: 2%;
@@ -131,7 +160,7 @@ font-size: 2.0em;
 .flex-container-forybut {
 
   display: flex;
-  background-color: white;
+  background-color: black;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -144,7 +173,7 @@ font-size: 2.0em;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: black;
   text-align: center;
   margin-top: 2%;
   margin-bottom: 6%;
@@ -158,7 +187,7 @@ font-size: 2.0em;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: black;
   margin-top: 1%;
 
 }
@@ -170,7 +199,7 @@ font-size: 2.0em;
 .flex-item-SobreMi {
 
   display: flex;
-  background-color: white;
+  background-color: black;
   margin: 40px;
   text-align: center;
 
@@ -180,7 +209,7 @@ font-size: 2.0em;
 
   flex-direction: column;
   text-align: center;
-  background-color: white;
+  background-color: black;
   margin-top: 16px;
   margin-bottom: 16px ;
   margin-right: 12px;
@@ -190,7 +219,7 @@ font-size: 2.0em;
 
 .flex-item-forybut {
 
-  background-color: white;
+  background-color: black;
   text-align: center;
 
 }
@@ -201,6 +230,7 @@ font-size: 2.0em;
   flex-direction: column;
   margin-top: 5%;
   margin-bottom: 5%;
+  background-color: black;
 
 }
 
@@ -209,6 +239,7 @@ font-size: 2.0em;
   margin-top: 1%;
   margin-bottom: 2%;
   flex-direction: row;
+  background-color: black;
 
 }
 
@@ -286,15 +317,18 @@ img {
 
 #jusparSobreMi {
 
-  text-align: justify;
-  text-align-last: justify;
+  text-align: center;
+  text-align-last: center;
   font-size: 1.0em;
+  color: white;
 
 }
 
 #letrasmistecfa {
 
   margin-top: 0.9em;
+  color: red;
+  font-size: 1.0em;
 
 }
 
@@ -308,8 +342,13 @@ img {
   width: 800px;
   height: 100px;
   resize: none;
+  background-color: black;
 
 }
+.inputanchoforybut1 {  
+ 
+  background-color: black;
 
-  
+}
+ 
 
