--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ body {
   text-align: center;
   font-family: "Cascadia Code", Consolas, monospace;
   background-color: black;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
 
 }
 
@@ -152,8 +152,8 @@ color: yellow
   display: flex;
   background-color: black;
   align-items: center;
-  margin-top: 1%;
-  margin-bottom: 2%;
+  margin-top: 2%;
+  margin-bottom: 5%;
 
 }
 
@@ -175,7 +175,7 @@ color: yellow
   align-items: center;
   background-color: black;
   text-align: center;
-  margin-top: 2%;
+  margin-top: 1%;
   margin-bottom: 6%;
   border: 1.3px solid black;
   border-radius: 3%;
@@ -210,8 +210,8 @@ color: yellow
   flex-direction: column;
   text-align: center;
   background-color: black;
-  margin-top: 16px;
-  margin-bottom: 16px ;
+  margin-top: 0.5px;
+  margin-bottom: 0.1px ;
   margin-right: 12px;
   margin-left: 12px;
 
@@ -251,7 +251,7 @@ color: yellow
   justify-content: center;
   border-radius: 15px;
   margin-top: 3%;
-  margin-bottom: 3%;
+  margin-bottom: 0.5%;
   border: 1px black solid;
 
 }  
@@ -259,8 +259,8 @@ color: yellow
 .márgenesmistecfa {
 
   /*display: flex;*/
-  margin-top: 1.0%;
-  margin-bottom: 1.0%; 
+  margin-top: 10.0%;
+  margin-bottom: 10.0%; 
   margin-right: 10%;
 
 }
@@ -301,9 +301,12 @@ img {
 
 }
 
-#HTML,
-#CSS,
-#JavaScript {
+#JavaScript,
+#TypeScript,
+#Python, 
+#Nest,
+#PostgreSQL,
+#React {
 
   width: 5em;
   height: 5em;
