--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,20 +104,12 @@ h3 {
 
 .idiomas button {
 
-  background-color: #222;
-  color: white;
+  color: black;
+  background-color: lightgray;
   border: 1px solid #555;
   padding: 5px 10px;
   border-radius: 4px;
-  cursor: pointer;
   font-size: 0.9rem;
-  transition: background-color 0.2s;
-
-}
-
-.idiomas button:hover {
-
-  background-color: #444;
 
 }
 
@@ -470,6 +462,41 @@ img {
   background-color: #330000;
   
 }
+
+.mensaje-error {
+
+  color: red;
+  text-align: center;
+  margin-top: 10px;
+
+}
+
+.oculto {
+
+  display: none;
+
+}
+
+#cargar_actividad:active {
+
+  background-color: #ccc;  
+  transform: scale(0.97);  
+  font-weight: all 0.1s ease;
+
+}
+
+.idiomas button:active {
+
+  background-color:  #ccc;
+  transform: scale(0.97);
+  font-weight: all 0.1s ease;
+
+}
+
+
+
+
+
 
 
 
