--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,7 @@ h3 {
 .idiomas button {
 
   color: black;
-  background-color: lightgray;
+  background-color: white;
   border: 1px solid #555;
   padding: 5px 10px;
   border-radius: 4px;
@@ -118,17 +118,23 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: black;
+  background-color: #111;
   margin-top: 4%;
+  margin-left: 3%;
+  border-radius: 15px;
+  margin-right: 3%;
+  margin-bottom: 5%;
 
 }
 
 .flex-item-SobreMi {
 
   display: flex;
-  background-color: black;
+  background-color: #111;
   margin: 20px;
   text-align: center;
+  margin-bottom: 1%;
+
 
 }
 
@@ -163,21 +169,23 @@ h3 {
   justify-content: center;
   align-items: stretch;
   gap: 16px;
-  background-color: black;
+  background-color: #111;
   margin: 2% auto 5%;
-  max-width: 1000px;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 15px;
 
 }
 
 .flex-item-mistecfa {
 
   display: flex;
-  background-color: black;
+  background-color: #111;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
   margin: 0.08% 0.5%;
-  border: 1px black solid;
+  margin-bottom: 1.5%;
 
 }
 
@@ -186,7 +194,7 @@ h3 {
   width: 200px;
   text-align: center;
   margin: 0.1em;
-  background-color: black;
+  background-color: #111;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -302,7 +310,7 @@ label {
 button {
 
   color: black;
-  background-color: lightgray;
+  background-color:white;
   padding: 10px 10px;
   border: none;
   border-radius: 4px;
@@ -487,7 +495,7 @@ img {
 
 .idiomas button:active {
 
-  background-color:  #ccc;
+  background-color: #ccc;
   transform: scale(0.97);
   transition: all 0.1s ease;
 
