--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,10 +16,10 @@
 
 body {
 
-  margin: 0;
+  margin: 5%;
   padding: 0;
   font-family: 'Cascadia Code', 'Consolas', 'Courier New', monospace;
-  background-color: black;
+  background-color: #111;
 
 }
 
@@ -61,8 +61,7 @@ h3 {
 
   color: yellow;
   text-align: center;
-  width: 100%;
-  margin-bottom: 1.5%;
+  width: 100%;  
 
 }
 
@@ -78,7 +77,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   padding: 20px 0 15px;
-  background-color: black;
+  background-color: #111;
   text-align: center;
   gap: 10px;
 
@@ -118,7 +117,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #111;
+  background-color: black;
   margin-top: 4%;
   margin-left: 5%;
   border-radius: 15px;
@@ -130,7 +129,7 @@ h3 {
 .flex-item-SobreMi {
 
   display: flex;
-  background-color: #111;
+  background-color: black;
   margin: 20px;
   text-align: center;
   margin-bottom: 1%;
@@ -169,7 +168,7 @@ h3 {
   justify-content: center;
   align-items: stretch;
   gap: 16px;
-  background-color: #111;
+  background-color: black;
   margin: 2% auto 5%;
   margin-left: 5%;
   margin-right: 5%;
@@ -180,7 +179,7 @@ h3 {
 .flex-item-mistecfa {
 
   display: flex;
-  background-color: #111;
+  background-color: black;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
@@ -194,10 +193,11 @@ h3 {
   width: 200px;
   text-align: center;
   margin: 0.1em;
-  background-color: #111;
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 
 }
 
@@ -249,7 +249,9 @@ h3 {
   flex-direction: column;
   align-items: center;
   background-color: black;
-  margin-top: 0.5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 15px;
 
 }
 
@@ -260,6 +262,7 @@ h3 {
   padding: 10px;
   background-color: black;
   text-align: center;
+  margin-top: 1.5%;
 
 }
 
@@ -324,7 +327,7 @@ button {
   justify-content: center;
   background-color: black;
   text-align: center;
-  margin: 0.5% 0 6%;
+  margin: 0.5% 0 6%;  
   border-radius: 3%;
   padding: 16px;
   color: white;
@@ -339,6 +342,8 @@ button {
   align-items: center;
   background-color: black;
   margin-top: 0.5%;
+  margin-left: 5%;
+  margin-right: 5%;
 
 }
 
@@ -535,6 +540,14 @@ img {
   transform: translateY (0);
 
 }
+
+
+
+
+
+
+
+
 
 
 
