--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ h2 {
 h3 {
 
   padding-top: 20px;
-  font-size: 2em;
+  font-size: 2.0em;
   color: yellow;
 
 }
@@ -92,8 +92,14 @@ h3 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
+  margin-top: 2%;
+  margin-bottom: 1.5%;
+  padding: 1%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
 
 }
+
 
 .languages button {
 
@@ -120,7 +126,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   background-color: black;
-  margin-top: 4%;
+  margin-top: 3.5%;
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
