--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,8 +51,23 @@ h2 {
 h3 {
 
   padding-top: 20px;
-  font-size: 2.0em;
+  font-size: 2.0em; 
   color: yellow;
+
+}
+
+#welcome {
+
+  margin-top: 0.5%;
+  margin-bottom: 11%;
+
+}
+
+#name,
+#title {
+
+  margin: 0;
+  padding: 0;
 
 }
 
@@ -73,6 +88,7 @@ h3 {
   background-color: #111;
   text-align: center;
   gap: 10px;
+  margin-bottom: 0%;
 
 }
 
@@ -91,15 +107,15 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  flex-direction: row;
+  gap: 20px;
   margin-top: 2%;
   margin-bottom: 1.5%;
-  padding: 1%;
+  padding: 2%;
   border: 1px solid #ccc;
   border-radius: 8px;
 
 }
-
 
 .languages button {
 
@@ -126,7 +142,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   background-color: black;
-  margin-top: 3.5%;
+  margin-top: 4%;
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
