feat(about-me, profession-title, technologies): update About Me with backend focus, adjust profession title under name, and replace React with Node.js (logo & link).

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -347,7 +347,7 @@ a.tech-link:active {
 #Python,
 #Nest,
 #PostgreSQL,
-#React {
+#Node {
 
   width: 5em;
   height: 5em;
@@ -690,7 +690,7 @@ img {
   #Python,
   #Nest,
   #PostgreSQL,
-  #React {
+  #Node {
 
     width: 3.5em;
     height: 3.5em;
